--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,2 +1,7 @@
-<h1>Ceci est la vue "Home"</h1><br>
-<button ng-click="home.ouvrirPartial1()">Ouvrir partial 1</button>
+<div class="col-lg-12">
+	<h1 ng-bind=" 'home.titre' | translate"></h1>
+	<br>
+	<button class="btn btn-default" ng-bind="'global.bouton.go_partial1' | translate" ng-click="home.ouvrirPartial1()"></button>
+	<button class="btn btn-default" ng-bind="'global.bouton.go_about' | translate" ng-click="home.ouvrirAbout()"></button>
+</div>
+
