--- a/components/contacts/detail/contacts.detail.html
+++ b/components/contacts/detail/contacts.detail.html
@@ -25,4 +25,7 @@
 	</div>
 </div>
 <br>
-<a class="btn btn-default" href="/contacts/liste" ng-bind=" 'global.bouton.retour' | translate"></a>
+<div class="animated fadeInUp">
+	<a class="btn btn-default" href="/contacts/liste" ng-bind=" 'global.bouton.retour' | translate"></a>
+</div>
+
