--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,15 @@
-input[type='text'] {
-    background-image: url(./img/search.gif);
-    background-position: 50px 7px;
-    background-repeat: no-repeat;
+body {
+    margin-bottom: 60px;
+}
+
+.container .text-muted {
+    margin: 20px 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
 }
