--- a/components/about/about.html
+++ b/components/about/about.html
@@ -1,5 +1,7 @@
 <div class="col-lg-12">
 	<h1 ng-bind=" 'about.titre' | translate"></h1>
 	<br>
-	<a class="btn btn-default" ui-sref="home" ng-bind="'global.bouton.go_home' | translate"></a>
+	<div class="animated fadeInUp">
+		<a class="btn btn-default" ui-sref="home" ng-bind="'global.bouton.go_home' | translate"></a>
+	</div>
 </div>
