--- a/components/contacts/liste/contacts.liste.html
+++ b/components/contacts/liste/contacts.liste.html
@@ -1,4 +1,7 @@
-<h2>Liste des contacts</h2>
+<h2>
+	<i class="fa fa-search"></i>
+	<span ng-bind="'contacts.liste.titre' | translate "></span>
+</h2>
 <br>
 <div class="row">
 	<div class="col-sm-3">
