--- a/components/error/error.html
+++ b/components/error/error.html
@@ -1,1 +1,3 @@
-<h1 ng-bind=" 'error.titre ' | translate "></h1>
+<div class="col-lg-12">
+	<h1 ng-bind=" 'error.titre ' | translate "></h1>
+</div>
