- my code is 3 month old i dunno what was going on =D

--- a/components/contacts/liste/contacts.liste.html
+++ b/components/contacts/liste/contacts.liste.html
@@ -5,7 +5,7 @@
 <br>
 <div class="row">
 	<div class="col-sm-3">
-		<input class="form-control" type="text" ng-model="searchBox" placeholder="{{ 'global.searchBox.placeholder' | translate }}" ng-cloak>
+		<input class="form-control" type="text" ng-model="searchBox" placeholder="{{ 'global.searchBox.placeholder' | translate }}">
 	</div>
 </div>
 <br>
