--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -1,7 +1,9 @@
-<div class="col-lg-12">
-	<h1 ng-bind=" 'about.titre' | translate"></h1>
-	<br>
-	<div class="animated fadeInUp">
-		<a class="btn btn-default" ui-sref="home" ng-bind="'global.bouton.go_home' | translate"></a>
+<div class="container">
+	<div class="col-lg-12">
+		<h1 ng-bind=" 'about.titre' | translate"></h1>
+		<br>
+		<div class="animated fadeInUp">
+			<a class="btn btn-default" ui-sref="home" ng-bind="'global.bouton.go_home' | translate"></a>
+		</div>
 	</div>
 </div>
