--- a/app/components/contacts/contacts.html
+++ b/app/components/contacts/contacts.html
@@ -1,5 +1,7 @@
-<div class="col-lg-12">
-	<h1 ng-bind=" 'contacts.titre' | translate"></h1>
-	<hr><br>
-	<div ui-view></div>
+<div class="container">
+	<div class="col-lg-12">
+		<h1 ng-bind=" 'contacts.titre' | translate"></h1>
+		<hr><br>
+		<div ui-view></div>
+	</div>
 </div>
