--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -1,3 +1,5 @@
-<div class="col-lg-12">
-	<h1 ng-bind=" 'dashboard.titre' | translate"></h1>
+<div class="container">
+	<div class="col-lg-12">
+		<h1 ng-bind=" 'dashboard.titre' | translate"></h1>
+	</div>
 </div>
