--- a/app/components/header/menu/menu.html
+++ b/app/components/header/menu/menu.html
@@ -7,6 +7,9 @@
         <li ng-class="{'active': menu.isActive('home')}">
         	<a ui-sref="home">Home</a>
         </li>
+        <li ng-class="{'active': menu.isActive('dashboard')}">
+          <a ui-sref="dashboard">Dashboard</a>
+        </li>
         <li ng-class="{'active': menu.isActive('contacts')}">
           <a href="/contacts/liste">Contacts</a>
         </li>
