--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,9 +1,10 @@
-<div class="col-lg-12">
-	<h1 ng-bind=" 'home.titre' | translate"></h1>
-	<br>
-	<div class="animated fadeInUp">
-		<button class="btn btn-default" ng-bind="'global.bouton.go_partial1' | translate" ng-click="home.ouvrirPartial1()"></button>
-		<button class="btn btn-default" ng-bind="'global.bouton.go_about' | translate" ng-click="home.ouvrirAbout()"></button>
+<div class="container">
+	<div class="col-lg-12">
+		<h1 ng-bind=" 'home.titre' | translate"></h1>
+		<br>
+		<div class="animated fadeInUp">
+			<button class="btn btn-default" ng-bind="'global.bouton.go_partial1' | translate" ng-click="home.ouvrirPartial1()"></button>
+			<button class="btn btn-default" ng-bind="'global.bouton.go_about' | translate" ng-click="home.ouvrirAbout()"></button>
+		</div>
 	</div>
 </div>
-
