--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,15 +1,34 @@
 body {
-    margin-bottom: 60px;
+   margin-bottom: 60px;
+}
+
+#wrapper {
+  height: 100%;
 }
 
 .container .text-muted {
-    margin: 20px 0;
+   margin: 20px 0;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #f5f5f5;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+/* page */
+#page-wrapper {
+  min-height:100%;
+  padding: 0 15px;
+}
+
+@media (min-width: 768px) {
+	#page-wrapper {
+		position: inherit;
+	  margin: 0 0 0 250px;
+	  padding: 0 30px;
+	  border-left: 1px solid #e7e7e7;
+	}
 }
