--- a/app/components/header/menu/menu.html
+++ b/app/components/header/menu/menu.html
@@ -1,23 +1,22 @@
-<nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" ui-sref="home">FunApp</a>
-    </div><!-- /.navbar-header -->
-    <ul class="nav navbar-nav">
-        <li ng-class="{'active': menu.isActive('home')}">
-        	<a ui-sref="home">Home</a>
-        </li>
-        <li ng-class="{'active': menu.isActive('dashboard')}">
-          <a ui-sref="dashboard">Dashboard</a>
-        </li>
-        <li ng-class="{'active': menu.isActive('contacts')}">
-          <a href="/contacts/liste">Contacts</a>
-        </li>
-    </ul><!-- /.navbar-nav -->
-    <ul class="nav navbar-nav navbar-right">
-        <li ng-class="{'active': menu.isActive('about')}">
-        	<a ui-sref="about">About</a>
-        </li>
-    </ul><!-- /.navbar-right -->
-  </div><!-- /.container-fluid -->
+<nav class="navbar navbar-default navbar-static-top">
+  <!-- /.navbar-header en mode mobile burger -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" ng-click="collapse=!collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" ui-sref="home">FunApp</a>
+  </div>
+  <!-- sidebar -->
+  <div class="navbar-default sidebar">
+    <div class="sidebar-nav navbar-collapse">
+      <ul class="nav">
+        <li>TEST 1</li>
+        <li>TEST 2</li>
+        <li>TEST 3</li>
+        <li>TEST 4</li>
+      </ul>
+    </div>
+  </div>
 </nav>
